--- a/books/!template.html
+++ b/books/!template.html
@@ -114,12 +114,12 @@ twilight.html - Twilight                                          DONE
 thegameofthrones.html - A Game of Thrones                         DONE                 
 chosenones.html - Chosen Ones                                     DONE     
 avatar.html - Avatar                                              DONE 
-thebookthief.html - The Book Thief                                          
-wewishyouluck.html - We Wish You Luck                                          
-thepapergirlofparis.html - The Paper Girl Of Paris                                          
-thecardboardkingdom.html - The Cardboard Kingdom                                          
-herperfectlife.html - Her Perfect Life                                          
-thefirstkisshypothesis.html - The First Kiss Hypothesis                                          
+thebookthief.html - The Book Thief                                DONE          
+wewishyouluck.html - We Wish You Luck                             DONE             
+thepapergirlofparis.html - The Paper Girl Of Paris                DONE                          
+thecardboardkingdom.html - The Cardboard Kingdom                  DONE                        
+herperfectlife.html - Her Perfect Life                            DONE              
+thefirstkisshypothesis.html - The First Kiss Hypothesis           DONE                               
 strangeplanet.html - Strange Planet                                          
 happily.html - Happily Ever After & Everything In Between                                          
 primer.html - Primer                                          
