--- a/books/!template.html
+++ b/books/!template.html
@@ -120,7 +120,7 @@ thepapergirlofparis.html - The Paper Girl Of Paris                DONE
 thecardboardkingdom.html - The Cardboard Kingdom                  DONE                        
 herperfectlife.html - Her Perfect Life                            DONE              
 thefirstkisshypothesis.html - The First Kiss Hypothesis           DONE                               
-strangeplanet.html - Strange Planet                                          
+strangeplanet.html - Strange Planet                               DONE           
 happily.html - Happily Ever After & Everything In Between                                          
 primer.html - Primer                                          
 broughtme.html - You Brought Me The Ocean                                          
