--- a/recom.html
+++ b/recom.html
@@ -53,10 +53,10 @@
         <input class="dada" type="checkbox" id="classics" value="Classics">
         <label for="classics">Classics</label>
         <br>
-        <br>
+        <!--<br>
         <input class="dada" type="checkbox" id="comics" value="Comics">
         <label for="comics">Comics</label>
-        <br>
+        <br>-->
         <br>
         <input class="dada" type="checkbox" id="fantasy" value="Fantasy">
         <label for="fantasy">Fantasy</label>
@@ -67,7 +67,7 @@
         <br>
         <br>
         <input class="dada" type="checkbox" id="graphnovel" value="Graphic-Novels">
-        <label for="graphnovel">Graphic Novels</label>
+        <label for="graphnovel">Graphic Novels/Comics</label>
         <br>
         <br>
         <input class="dada" type="checkbox" id="horror" value="Horror">
