--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- Header -->
+    <!-- Headers -->
     <div id="nav">
       <div id="nav_wrapper">
         <ul>
